crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
see ++[++@knuth1984++]++ for details
