crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[source%linesnum,python]
----
print(1)
print(2)
----
