crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
_emph_ *strong* [line-through]#struck# super^2^ sub~3~
