crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__escape-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
a & b % c ++#++ d ++_++ e $ f ++{++ g } h ^ i ~ j
