crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__footnote-multipara.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref[multiblock footnote omitted]
