crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__headers.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
== One

=== Two

======= Six
