crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
image:https://example.org/i.png[alt]
