crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
an image:pic.png[alt words] inline
